2006-10-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: gif and jpeg images are supported,
	rework the parameters parsing so that we are sure which order the
	parameters are parsed in (Closes: #364022), add the starts of
	imagepreview support for the DivX plugin

============ Version 2.17.1

2006-10-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 2.17.1
	* NEWS: upd

2006-10-21  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemMullYPlugin.cpp: add "video/x-msvideo" as
	a supported mime-type, allows playback of
	http://www.pancrace.tv/
	(Closes: #363214)

2006-10-21  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Add basic support for Quicktime
	URL extensions (Closes: #363825)

2006-10-18  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: add support for the URL parameter
	(Closes: #362702), exit _fork if we don't have a URL
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_asf_parser),
	(totem_pl_parser_add_pls_with_contents), (totem_pl_parser_add_pls),
	(totem_pl_parser_add_asx), (totem_pl_parser_add_xspf):
	Fix return values, they're not gbooleans
	* src/totem-mozilla-viewer.c: (main): exit if we don't have any
	URLs passed, even when embedded

2006-10-18  James Livingston  <doclivingston@gmail.com>

	Initial Win32 porting stuff.

	* configure.in:
	* src/backend/bvw-test.c: (main):
	* src/backend/video-utils.c:
	* src/totem-screenshot.c: (totem_screenshot_temp_file):
	* src/totem-video-thumbnailer.c: (main):
	* src/totem.c: (main):

	* src/totem-scrsaver.c: (screensaver_enable_x11),
	(screensaver_disable_x11), (screensaver_init_x11),
	(totem_scrsaver_init), (totem_scrsaver_disable),
	(totem_scrsaver_enable), (totem_scrsaver_finalize): leave the
	implementation of this blank on non-X11 systems, and emit a warning.
	From #342926

2006-10-17  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemComplexPlugin.cpp: add "application/smil"