@@ -1,3 +1,9 @@
+2006-10-23  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemPlugin.cpp: Fix parsing of all in caps parameters,
+	fix thinko that completely broke boolean parsing, fix other thinko that
+	made made mNoAutostart have the opposite value to what it should
+
 2006-10-22  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totemPlugin.cpp: gif and jpeg images are supported,
